--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -22,23 +22,26 @@
     }
 
     &__container {
-        padding: 8px 40px;
+        margin-top: 10px;
+        padding: 8px 16px;
         display: flex;
         justify-content: space-between;
 
         @media (max-width:768px) {
-            padding: 0 12px 0 12px;
+            margin-top: -10px;
+            padding: 0;
         }
     }
 
     &__logo {
-        max-width: 130px;
+        max-width: 150px;
         width: 100%;
-        margin: 5px;
+        margin: 10px;
         transition: opacity .5s ease;
 
         @media (max-width: 768px) {
-            max-width: 64px;
+            max-width: 70px;
+            padding-top: 12px;
         }
     }
 
@@ -53,12 +56,12 @@
 
     .button {
         height: 50px;
-
+        padding: 15px 20px;
 
         @media (max-width: 768px) {
-            font-size: 13px;
-            padding: 8px 17px;
-            height: 40px;
+            font-size: 10px;
+            padding: 8px 8px;
+            height: 20px;
             letter-spacing: 0;
         }
     }
