--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,7 +1,7 @@
 @use 'variaveis';
 
 .hero {
-    padding: 5.6vw;
+    padding: 1vw;
     min-height: 80vh;
     background-image: url(../images/hero_img.png);
     text-align: center;
@@ -9,18 +9,42 @@
 
     @media (max-width: 768px) {
         background-image: url(../images/hero_img.png);
-        padding: calc(50vw + 25px);
         background-size: contain;
         background-repeat: no-repeat;
-        margin-top: -55px;
-        text-align: center;
     }
 
     &__history {
+        margin-top: 15px;  
         font-weight: 400;
-        padding: 0 300px;
+        padding: 0 400px 0 ;
         line-height: 1.5;
-        margin-bottom: 30em;
+        margin-bottom: 35em;
+        margin-left: 12px;
+
+        @media (max-width: 768px) {
+            font-size: 8px;
+            padding: 0 50px;
+            margin-bottom: 105px;
+        }
     }
 
+    .button {
+        height: 50px;
+        padding: 15px 20px;
+
+        @media (max-width: 768px) {
+            font-size: 10px;
+            padding: 8px 10px;
+            height: 30px;
+            letter-spacing: 0;
+        }
+    }
+
+    p {
+        font-size: 25px;
+        margin-top: 5px;
+        @media (max-width: 768px) {
+            font-size: 10px;
+        }
+    }
 }
